chore: Add checkstyle plugin to validate codestyle (#899)
- add checkstyle rules
- add checkstyle plugin
- adjust existing code to codestyle rules

Closes: MODINVSTOR-1056